force-app/main/default/objects/Contract/fields/Auto_Renewal_Cancellation_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewal_Cancellation_Deadline__c</fullName>
    <formula>Next_Renewal_Date__c -1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto-Renewal Cancellation Deadline</label>
    <type>Date</type>
</CustomField>