force-app/main/default/objects/Contract/fields/Calculated_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Calculated_End_Date__c</fullName>
    <formula>IF(ISNULL( Contract_Termination_Date__c),  EndDate , Contract_Termination_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated End Date</label>
    <type>Date</type>
</CustomField>