force-app/main/default/objects/Contract/fields/Calculated_Number_Of_Desks__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Number_Of_Desks__c</fullName>
    <label>Calculated Number Of Desks</label>
    <summarizedField>Order.Desk_Count__c</summarizedField>
    <summaryForeignKey>Order.ContractId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>