force-app/main/default/objects/Contract/fields/Calculated_Price_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Price_Adjustment__c</fullName>
    <label>Calculated Price Adjustment</label>
    <summarizedField>Order.Calculated_Total_Price_Adjustment__c</summarizedField>
    <summaryForeignKey>Order.ContractId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>