force-app/main/default/objects/Contract/fields/Contract_has_started__c.field-meta.xml
<CustomField>
    <fullName>Contract_has_started__c</fullName>
    <formula>StartDate &lt; TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract has started</label>
    <type>Checkbox</type>
</CustomField>