force-app/main/default/objects/Contract/fields/Contract_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Termination_Date__c</fullName>
    <inlineHelpText>Manual termination</inlineHelpText>
    <label>Contract Termination Date</label>
    <type>Date</type>
</CustomField>