force-app/main/default/objects/Contract/fields/Current_Renewal_Iteration__c.field-meta.xml
<CustomField>
    <fullName>Current_Renewal_Iteration__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Current Renewal Iteration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>