force-app/main/default/objects/Contract/fields/Date_Label__c.field-meta.xml
<CustomField>
    <fullName>Date_Label__c</fullName>
    <formula>&apos;CONTRACT &apos;+ContractNumber+&apos;: [&apos;+
IF(DAY(StartDate)&lt;10,TEXT(0)+TEXT(DAY(StartDate)), TEXT(DAY(StartDate)))+&apos;-&apos;+
IF(MONTH(StartDate)&lt;10,TEXT(0)+TEXT(MONTH(StartDate)), TEXT(MONTH(StartDate)))+&apos;-&apos;+TEXT(YEAR(StartDate))+&apos; - &apos;+
IF(DAY(EndDate)&lt;10,TEXT(0)+TEXT(DAY(EndDate)), TEXT(DAY(EndDate)))+&apos;-&apos;+
IF(MONTH(EndDate)&lt;10,TEXT(0)+TEXT(MONTH(EndDate)), TEXT(MONTH(EndDate)))+&apos;-&apos;+TEXT(YEAR(EndDate))+&apos;]&apos;</formula>
    <label>Date Label</label>
    <type>Text</type>
</CustomField>