force-app/main/default/objects/Contract/fields/Desks_Leaving_Next_Month_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Desks_Leaving_Next_Month_Quantity__c</fullName>
    <formula>IF(
  AND(
    MONTH(Calculated_End_Date__c) = MONTH(TODAY()),
    YEAR(Calculated_End_Date__c) = YEAR(TODAY())
  ),
  Calculated_Number_Of_Desks__c,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Desks Leaving Next Month Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>