force-app/main/default/objects/Contract/fields/Internal_external__c.field-meta.xml
<CustomField>
    <fullName>Internal_external__c</fullName>
    <label>Internal/External</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>MIX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>