force-app/main/default/objects/Contract/fields/Locations__c.field-meta.xml
<CustomField>
    <fullName>Locations__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Locations</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>