force-app/main/default/objects/Contract/fields/Member_registration_URL__c.field-meta.xml
<CustomField>
    <fullName>Member_registration_URL__c</fullName>
    <formula>&quot;https://rooms.my.site.com/membersregistration?contractId=&quot; &amp;  Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member registration URL</label>
    <type>Text</type>
</CustomField>