force-app/main/default/objects/Contract/fields/Members_Registred__c.field-meta.xml
<CustomField>
    <fullName>Members_Registred__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Members Registred</label>
    <type>Checkbox</type>
</CustomField>