force-app/main/default/objects/Contract/fields/Next_Possible_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Possible_Termination_Date__c</fullName>
    <formula>IF(
  MOD(MONTH(TODAY()) + VALUE(TEXT( Opportunity__r.Lease_Termination_Notice_Monthes__c )), 12) = 0,
  DATE(
    YEAR(TODAY()) + FLOOR((MONTH(TODAY()) + VALUE(TEXT(Opportunity__r.Lease_Termination_Notice_Monthes__c)) - 1) / 12),
    12,
    CASE(
      12,
      1, 31,
      2, IF(MOD(YEAR(TODAY()) + FLOOR((MONTH(TODAY()) + VALUE(TEXT(Opportunity__r.Lease_Termination_Notice_Monthes__c)) - 1) / 12), 4) = 0, 29, 28),
      3, 31,
      4, 30,
      5, 31,
      6, 30,
      7, 31,
      8, 31,
      9, 30,
      10, 31,
      11, 30,
      12, 31,
      31
    )
  ),
  DATE(
    YEAR(TODAY()) + FLOOR((MONTH(TODAY()) + VALUE(TEXT(Opportunity__r.Lease_Termination_Notice_Monthes__c)) - 1) / 12),
    MOD(MONTH(TODAY()) + VALUE(TEXT(Opportunity__r.Lease_Termination_Notice_Monthes__c)), 12),
    CASE(
      MOD(MONTH(TODAY()) + VALUE(TEXT(Opportunity__r.Lease_Termination_Notice_Monthes__c)), 12),
      1, 31,
      2, IF(MOD(YEAR(TODAY()) + FLOOR((MONTH(TODAY()) + VALUE(TEXT(Opportunity__r.Lease_Termination_Notice_Monthes__c)) - 1) / 12), 4) = 0, 29, 28),
      3, 31,
      4, 30,
      5, 31,
      6, 30,
      7, 31,
      8, 31,
      9, 30,
      10, 31,
      11, 30,
      12, 31,
      31
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Possible Termination Date</label>
    <type>Date</type>
</CustomField>