force-app/main/default/objects/Contract/fields/Number_of_potential_members__c.field-meta.xml
<CustomField>
    <fullName>Number_of_potential_members__c</fullName>
    <label>Number of potential members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>