force-app/main/default/objects/Contract/fields/Office_Income__c.field-meta.xml
<CustomField>
    <fullName>Office_Income__c</fullName>
    <label>Office Income</label>
    <summarizedField>Order.Total_Standard_Income__c</summarizedField>
    <summaryForeignKey>Order.ContractId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>