force-app/main/default/objects/Contract/fields/Office_Income_Leaving_Next_Month__c.field-meta.xml
<CustomField>
    <fullName>Office_Income_Leaving_Next_Month__c</fullName>
    <formula>IF(
  AND(
    MONTH(Calculated_End_Date__c) = MONTH(TODAY()),
    YEAR(Calculated_End_Date__c) = YEAR(TODAY())
  ),
  Office_Income__c,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Office Income Leaving Next Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>