force-app/main/default/objects/Contract/fields/Renewal_Date_DM__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date_DM__c</fullName>
    <description>For data migration only</description>
    <inlineHelpText>For data migration only</inlineHelpText>
    <label>Renewal Date DM</label>
    <type>Date</type>
</CustomField>