force-app/main/default/objects/Contract/fields/Renewal_Due_Date_Status_15__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Due_Date_Status_15__c</fullName>
    <formula>AND ( ISPICKVAL(Renewal_Status__c, &apos;Renewed - pending&apos;), Calculated_Number_Of_Desks__c &gt;14 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Due Date Status 15+</label>
    <type>Checkbox</type>
</CustomField>