force-app/main/default/objects/Contract/fields/Renewal_Due_Date_Status__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Due_Date_Status__c</fullName>
    <description>Used in reports</description>
    <formula>ISPICKVAL(Renewal_Status__c, &apos;Renewed - pending&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Due Date Status</label>
    <type>Checkbox</type>
</CustomField>