force-app/main/default/objects/Contract/fields/Renewed_But_Not_Due__c.field-meta.xml
<CustomField>
    <fullName>Renewed_But_Not_Due__c</fullName>
    <formula>AND ( ISPICKVAL(Renewal_Status__c, &apos;Renewed - pending&apos;),  ISPICKVAL( Status , &apos;Activated&apos;) , Today() &gt;  EndDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewed But Not Due</label>
    <type>Checkbox</type>
</CustomField>