force-app/main/default/objects/Contract/fields/Second_Renewal_Period_Months__c.field-meta.xml
<CustomField>
    <fullName>Second_Renewal_Period_Months__c</fullName>
    <label>Second Renewal Period (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>