force-app/main/default/objects/Contract/fields/Send_Expiry_Notification__c.field-meta.xml
<CustomField>
    <fullName>Send_Expiry_Notification__c</fullName>
    <formula>ADDMONTHS(TODAY(), 2) = EndDate</formula>
    <label>Send Expiry Notification</label>
    <type>Checkbox</type>
</CustomField>