force-app/main/default/objects/Contract/validationRules/Auto_Renewal_Cancellation_Deadline.validationRule-meta.xml
<ValidationRule>
    <fullName>Auto_Renewal_Cancellation_Deadline</fullName>
    <active>true</active>
    <errorConditionFormula>AND (  ISCHANGED(Auto_Renewal__c ) , NOT(Auto_Renewal__c ),  TODAY()&gt; Auto_Renewal_Cancellation_Deadline__c )</errorConditionFormula>
    <errorDisplayField>Auto_Renewal__c</errorDisplayField>
    <errorMessage>Cannot Cancel Auto-renewal if Auto Renewal Cancellation Deadline is past due</errorMessage>
</ValidationRule>