force-app/main/default/objects/Contract/validationRules/Expiry_date_before_canceling_contract.validationRule-meta.xml
<ValidationRule>
    <fullName>Expiry_date_before_canceling_contract</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISPICKVAL( Status ,&apos;Terminated&apos;), ISNULL( Contract_Termination_Date__c ))</errorConditionFormula>
    <errorDisplayField>Contract_Termination_Date__c</errorDisplayField>
    <errorMessage>Please add the Contract Termination Date before canceling the contract</errorMessage>
</ValidationRule>