force-app/main/default/objects/Contract/validationRules/Reason_when_renewal_status_is_leaving.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_when_renewal_status_is_leaving</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Renewal_Status__c, &apos;Leaving&apos;),
    ISBLANK(TEXT(Non_Renewal_Reason__c))
)</errorConditionFormula>
    <errorDisplayField>Non_Renewal_Reason__c</errorDisplayField>
    <errorMessage>Please provide a Non-Renewal reason when Renewal Status is &quot;Leaving&quot;</errorMessage>
</ValidationRule>