force-app/main/default/objects/Contract/validationRules/Termination_date_earli_next_payment_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Termination_date_earli_next_payment_date</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( Contract_Termination_Date__c &lt; Next_Possible_Termination_Date__c,   NOT(ISPICKVAL(Contract_Termination_Reason__c , &apos;Optimization Process&apos;)) )</errorConditionFormula>
    <errorMessage>The Contract Termination Date cannot be earlier than the Next Possible Termination Date</errorMessage>
</ValidationRule>