force-app/main/default/objects/Contract/validationRules/Termination_reason_when_date_notnull.validationRule-meta.xml
<ValidationRule>
    <fullName>Termination_reason_when_date_notnull</fullName>
    <active>true</active>
    <description>when the termination date is not null you must populate the reason</description>
    <errorConditionFormula>AND(
    NOT(ISNULL(Contract_Termination_Date__c)), 
    ISBLANK(TEXT( Contract_Termination_Reason__c ))
    )</errorConditionFormula>
    <errorMessage>Please populate the contract termination reason</errorMessage>
</ValidationRule>