force-app/main/default/objects/Contract/listViews/All_Contracts_Acro.listView-meta.xml
<ListView>
    <fullName>All_Contracts_Acro</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Agreement_Type__c</columns>
    <columns>Location__c</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>Auto_Renewal__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Total_Amount__c</columns>
    <columns>Auto_Renewal_Cancellation_Deadline__c</columns>
    <columns>Contract_has_started__c</columns>
    <columns>Origin__c</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Location__c</field>
        <operation>contains</operation>
        <value>Acro - TLV</value>
    </filters>
    <filters>
        <field>Auto_Renewal__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Acro - TLV</label>
</ListView>