force-app/main/default/objects/Contract/listViews/BBC.listView-meta.xml
<ListView>
    <fullName>BBC</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Agreement_Type__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>Auto_Renewal__c</columns>
    <columns>Auto_Renewal_Cancellation_Deadline__c</columns>
    <columns>Contract_has_started__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Location__c</field>
        <operation>equals</operation>
        <value>BBC</value>
    </filters>
    <label>BBC</label>
</ListView>