force-app/main/default/objects/Contract/listViews/BSR_City.listView-meta.xml
<ListView>
    <fullName>BSR_City</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Agreement_Type__c</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>Auto_Renewal__c</columns>
    <columns>Auto_Renewal_Cancellation_Deadline__c</columns>
    <columns>Order__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Contract_has_started__c</columns>
    <columns>Renewal_Date_DM__c</columns>
    <columns>CONTRACT.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Location__c</field>
        <operation>equals</operation>
        <value>BSR City</value>
    </filters>
    <filters>
        <field>CONTRACT.STATUS</field>
        <operation>equals</operation>
        <value>Activated</value>
    </filters>
    <label>BSR City</label>
</ListView>